--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
   <body>
     <div class="container">
       <h1>Champions legue</h1>
+      <a href="#video1">Intro Video</a>
       <a href="#scorers">Top scorers</a>
+      <a href="#video2">Anons</a>
       <a href="#champions">Last champions</a>
+      <a href="#video3">Highlights</a>
       <!-- <p class="hero-text">
         The UEFA Champions League (historically known as the European Cup and
         mostly abbreviated worldwide as the UCL) is an annual club association
@@ -24,7 +27,11 @@
       >
     </div>
 
-    <div class="blank"></div>
+    <div class="blank">
+      <h3 class="bg__title">"Experience the electrifying drama, breathtaking goals, and unparalleled skill in the world's premier football tournament!"</h3>
+      <video id="video1" class="bg__video-first" src="./video/openning-video.mp4" loop autoplay muted></video>
+      <a class="home-btn" href="#">Home</a>
+    </div>
 
     <div id="scorers" class="container second">
       <h3 class="secondary-title">Top goal scorers</h3>
@@ -72,7 +79,11 @@
       </div>
     </div>
 
-    <div class="blank"></div>
+    <div class="blank">
+      <h3 class="bg__title">"Thrilling clashes of Europe's elite football clubs!"</h3>
+      <a class="home-btn" href="#">Home</a>
+      <video id="video2" class="bg__video-first" src="./video/champions-video.mp4" loop autoplay muted></video>
+    </div>
     <div id="champions" class="container third">
       <h3 class="secondary-title">Last 3 champions</h3>
       <a class="home-btn" href="#">Home</a>
@@ -115,6 +126,10 @@
       </div>
     </div>
 
-    <div class="blank last-blank"></div>
+    <div class="blank last-blank">
+      <h3 class="bg__title">"Unleashing passion, skill, and glory on Europe's grandest football stage!"</h3>
+      <a class="home-btn" href="#">Home</a>
+      <video id="video3" class="bg__video-first" src="./video/goal-video.mp4" loop autoplay muted></video>
+    </div>
   </body>
 </html>
